# depfile-parser

./: .clang-format  CMakeLists.txt  README.md  conanfile.txt  uuid.fsx
include/: depfile-parser.hpp
src/: parse-make.cpp  parse-nmake.cpp  utility.cpp  utility.hpp
test/: CMakeLists.txt  main.cpp  make.cpp  nmake.cpp
